[package]
name = "strategy"
version = "0.1.0"
edition = "2021"

[dependencies]
# Misc
hashbrown = "0.14.0"
tokio = { version = "1.29.0", features = ["full"] }
dashmap = "5.4.0"
thiserror = "1.0.37"
futures = "0.3.5"
async-trait = "0.1.64"
anyhow = "1.0.70"
serde = "1.0.145"

# EVM based crates
cfmms.workspace = true
ethers-flashbots.workspace = true
ethers.workspace = true
foundry-evm = { git = "https://github.com/mouseless-eth/foundry.git", rev="be23f81dc9071431ed57b69aeefee8ada19eaec0"}
anvil = { git = "https://github.com/mouseless-eth/foundry.git", rev="be23f81dc9071431ed57b69aeefee8ada19eaec0"}
eth-encode-packed = "0.1.0"
alloy-primitives = "0.5.0"
ethers-etherscan = {version = "2.0.7", default-features = false }

# Logging
colored = "2.0.0"
log = "0.4.17"
indicatif = "0.17.5"

# Artemis
artemis-core = { path = "../artemis-core" }

[dev-dependencies]
fern = {version = "0.6.2", features = ["colored"]}

[features]
debug = []
